<resources>
    <string name="app_name">虫情采集</string>
    <string name="app_label">虫情采集2.0</string>
    <string name="base_url">http://106.38.157.59:12808/grainInsects</string>

    <!--LoginActivity-->
    <string name="request_for_username">请输入用户名</string>
    <string name="request_for_password">请输入密码</string>
    <string name="tip_net_error">网络错误，请稍后再试</string>
    <string name="login">登录</string>
    <string name="copyright_bupt">北京邮电大学现代物流信息网络研究中心</string>
    <string name="copyright_lky">国家粮食局科学研究院</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--MainActivity-->

    <!--BookFragment-->
    <string name="request_for_pest_name">请输入害虫名称</string>
    <string name="beetles">甲虫类</string>
    <string name="moth">蛾类</string>
    <string name="mite">螨类</string>
    <string name="pest_not_found">您所搜索的储粮害虫不存在！</string>
    <string name="pest_name">名称</string>
    <string name="pest_category">种类</string>
    <string name="pest_family">科目</string>
    <string name="pest_feature">详细信息</string>

    <!--PestdetailActivity-->
    <string name="toolbar_pestdetail">害虫详情</string>
    <string name="feature">形态特征</string>
    <string name="habit">生活习性</string>
    <string name="damage">主要危害</string>
    <string name="distribution">分布状况</string>
    <string name="prevention">防治措施</string>
    <string name="importan">重要</string>

    <!--FactoryActivity-->
    <string name="lkmc">粮库名称</string>
    <string name="lkbm">粮库编码</string>
    <string name="lkdz">粮库地址</string>
    <string name="lc_num">粮仓数</string>
    <string name="post">邮政编码</string>
    <string name="contact">联系人</string>
    <string name="phone">联系电话</string>

    <!--DepotFrament-->
    <string name="depot_name">粮仓名称</string>
    <string name="depot_type">粮仓类型</string>
    <string name="depot_capacity">粮仓容量</string>

    <!--DepotActivity-->
    <string name="depot_desc">粮仓信息</string>
    <string name="depot_detail">粮情信息</string>
    <string name="depot_grainname">粮种名称</string>
    <string name="depot_clxs">存粮形式</string>
    <string name="depot_innum">入储数量</string>
    <string name="depot_source">粮食产地</string>
    <string name="depot_indate">入储日期</string>
    <string name="depot_harvestdate">收获日期</string>
    <string name="depot_reserveperiod">存储期限</string>
    <string name="depot_action">工艺信息</string>
    <string name="depot_action_date">2015-06-07</string>
    <string name="depot_action_content">惰性粉杀虫</string>
    <string name="ton">吨</string>

    <!--DepotEditActivity-->
    <string name="choose_grain">请输入粮种名称</string>
    <string name="choose_type">请选择装粮形式</string>
    <string name="choose_innum">请输入入储数量</string>
    <string name="choose_source">请输入粮食产地</string>
    <string name="choose_indate">请输入入储时间</string>
    <string name="choose_harvestdate">请输入收获时间</string>
    <string name="choose_reserve">请输入存储年限</string>
    <string name="submit">提交</string>
    <string name="year">年</string>
    <string name="upload_fail">上传失败!</string>
    <string name="upload_success">上传成功!</string>
    <string name="uploading">数据上传中……</string>

    <!--UploadFragment-->
    <string name="depot_and_location">粮仓与位置</string>
    <string name="depot_location">仓内位置</string>
    <string name="required_text">必\n\n填</string>
    <string name="pic_info">图片信息</string>
    <string name="choose_pest_source">请选择害虫来源</string>
    <string name="pest_info">害虫信息</string>
    <string name="kind_and_num">虫种与数量</string>
    <string name="tip_add_pest">点击左侧按钮\n添加害虫</string>
    <string name="optional_text">选\n\n填</string>
    <string name="location_info">位置信息</string>
    <string name="lati_and_longi">经纬度</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="loc_unit">°</string>
    <string name="loc_unit_format">%.2f°</string>
    <string name="envir_info">环境信息</string>
    <string name="temper_and_humi">温湿度</string>
    <string name="temperature">温度</string>
    <string name="humidity">湿度</string>
    <string name="temper_unit">℃</string>
    <string name="temper_unit_format">%.2f℃</string>
    <string name="humi_unit">%</string>
    <string name="humi_unit_format">%.2f%%</string>
    <string name="request_for_photo">图片信息不能为空！</string>
    <string name="request_for_lcbm">请选择粮仓！</string>
    <string name="request_for_pos">请选择仓内拍摄位置！</string>
    <string name="submit_success">上传成功！</string>
    <string name="submit_failed">上传失败！</string>
    <string name="weatherapi">http://weatherapi.market.xiaomi.com/</string>

    <!--InnerPositionActivity-->
    <string name="inner_title">平房仓采集点示意图</string>
    <string name="east">东</string>
    <string name="west">西</string>
    <string name="north">北</string>
    <string name="south">南</string>

    <!--PestSelectorActivity-->
    <string name="kind">虫种</string>
    <string name="num">数量</string>
    <string name="pest_unit">头</string>

    <!--UploadActivity-->
    <string name="uploaddata_id">编号：</string>
    <string name="bin_name">粮仓：</string>
    <string name="collect_device">设备：</string>
    <string name="collect_time">时间：</string>
</resources>
