<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.bupt.lab805.pestguide.activity.LoginActivity">

    <ImageView
        android:id="@+id/loginlogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/login_icon" />

    <cn.edu.bupt.lab805.pestguide.widget.ClearEditText
        android:id="@+id/et_username"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@+id/loginlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_edittext"
        android:drawablePadding="10dp"
        android:drawableRight="@mipmap/input_close"
        android:ems="15"
        android:hint="@string/request_for_username"
        android:inputType="text"
        android:textColor="#3BADA8"
        android:textSize="15sp" />

    <cn.edu.bupt.lab805.pestguide.widget.ClearEditText
        android:id="@+id/et_password"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:drawablePadding="10dp"
        android:drawableRight="@mipmap/input_close"
        android:ems="15"
        android:hint="@string/request_for_password"
        android:inputType="textPassword"
        android:textColor="#3BADA8"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_button_main"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright_bupt"
        android:textColor="@color/text_color"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright_lky"
        android:textColor="@color/text_color"
        android:textSize="12sp"/>

</RelativeLayout>
