<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="cn.edu.bupt.lab805.pestguide.fragment.BookFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/book_search_value"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/search_text_value"
            android:gravity="center"
            android:hint="@string/request_for_pest_name"
            android:textSize="@dimen/text_size_body" />

        <ImageView
            android:id="@+id/book_search_key"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/selector_search_key"
            android:gravity="center"
            android:src="@mipmap/book_search"
            android:textSize="@dimen/text_size_body" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/book_btn_beetle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button_pest_normal"
            android:gravity="center"
            android:text="@string/beetles"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_body" />


        <Button
            android:id="@+id/book_btn_moth"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_pest_normal"
            android:gravity="center"
            android:text="@string/moth"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_body" />

        <Button
            android:id="@+id/book_btn_mite"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button_pest_normal"
            android:gravity="center"
            android:text="@string/mite"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_body" />

    </LinearLayout>

    <TextView
        android:id="@+id/book_tv_caution"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="#FDFBF3"
        android:gravity="center"
        android:text="@string/pest_not_found"
        android:textColor="#696564"
        android:textSize="@dimen/text_size_body"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_pest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

</LinearLayout>
