<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@drawable/white_ripple">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/bug" />

        <TextView
            android:id="@+id/tv_item_pest_selector"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/input_b"
            android:gravity="center"
            android:hint="@string/kind"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_body" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/count" />


        <EditText
            android:id="@+id/et_item_pest_selector"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/input_b"
            android:gravity="center"
            android:hint="@string/num"
            android:inputType="number"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_body" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:text="@string/pest_unit"
            android:textColor="#696564"
            android:textSize="15sp" />

    </LinearLayout>


</android.support.v7.widget.CardView>